--- a/.eslintrc
+++ b/.eslintrc
@@ -25,5 +25,12 @@
     "es6": true,
     "jest": true,
     "node": true
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
+    }
   }
 }
