--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/polyfill": "^7.0.0",
     "@material-ui/core": "^3.1.2",
     "axios": "^0.18.0",
+    "date-fns": "^2.0.0-alpha.20",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
