--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "better-npm-run start",
     "build": "better-npm-run build",
+    "deploy": "gh-pages -d dist",
     "precommit": "lint-staged",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -19,13 +20,15 @@
     "start": {
       "command": "webpack-dev-server --hot --open --mode development",
       "env": {
-        "SPEEDRUNS_API": "http://localhost:8080"
+        "SPEEDRUNS_API": "http://localhost:8080",
+        "NODE_ENV": "development"
       }
     },
     "build": {
       "command": "webpack --mode production",
       "env": {
-        "SPEEDRUNS_API": "http://www.speedrun.com"
+        "SPEEDRUNS_API": "https://www.speedrun.com",
+        "NODE_ENV": "production"
       }
     }
   },
@@ -66,6 +69,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "gh-pages": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.1",
